--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
     </div>
     <!-- card section -->
     <section class="max-w-[1250px]  mx-auto mt-25">
-        <div class="card_header text-center ">
+        <div class="card_header text-center  ">
             <h1 class="text-[2rem] font-extrabold my-6">News & Events</h1>
             <p class="text-gray-400">There are many variations of passages of Lorem Ipsum available, but the majority
                 have suffered alteration in some form, by injected humour, or randomised words which don't look even
                 slightly believable. </p>
         </div>
-        <div class="body_section mt-10">
+        <div class="body_section mt-10 ">
             <div class="card p-5 sm:flex-row sm:justify-center sm:items-center md:flex md:gap-[25px]">
                 <div class="card1 shadow-md p-5">
                     <img src="image/news-1.png" alt=""">
@@ -197,51 +197,51 @@
         </div>
     </section>
     <!-- footer section -->
- <section class="bg-pink-100">
-    <div class="max-w-[1250px]  mx-auto mt-25 p-10 ">
-        <div class="flex justify-between items-center">
-            <img src="image/cup.png" alt="">
-            <div class="flex items-baseline gap-7 ">
-                <h1 class="font-semibold text-2xl">Ready to satrted?</h1>
-                <button
-                    class="h-[64px] w-[156px]  rounded-lg text-xl text-white  bg-gradient-to-r from-[#ff8135] to-[#ff0201]">Get
-                    started</button>
-            </div>
-        </div>
-        <div class="sections flex mt-20 justify-evenly">
-            <div>
-                <h1 class="mb-4 font-semibold">Quick Links</h1>
-                <p>Home</p>
-                <p>About Us</p>
-                <p>Insurance</p>
-                <p>Privacy Policy</p>
-            </div>
-            <div>
-                <h1 class="mb-4 font-semibold">Our Service</h1>
-                <p>Life Insurance</p>
-                <p>Car Insurance</p>
-                <p>Health Insurance</p>
-                <p>House Insurance</p>
-            </div>
-            <div>
-                <p class="mb-4 font-semibold">Help</p>
-                <p>Contact Us</p>
-                <p>FAQs</p>
-            </div>
-            <div>
-                <p class="mb-4 font-semibold">Subscribe to our newsletter</p>
-                <p class="my-5">Email</p>
-                <hr>
-                <div class="mt-10 flex gap-5">
-                    <span><i class="fa-brands fa-facebook-f"></i></span>
-                    <span><i class="fa-brands fa-twitter"></i></span>
-                    <span><i class="fa-brands fa-instagram"></i></span>
+    <section class="bg-pink-100">
+        <div class="max-w-[1250px]  mx-auto mt-25 md:p-10 ">
+            <div class="flex justify-between items-center mt-20">
+                <img src="image/cup.png" alt="">
+                <div class="flex items-baseline gap-7 ">
+                    <h1 class="text-gray-600 text-2xl">Ready to satrted?</h1>
+                    <button
+                        class="h-[64px] w-[156px]  rounded-lg text-xl text-white  bg-gradient-to-r from-[#ff8135] to-[#ff0201]">Get
+                        started</button>
                 </div>
             </div>
+            <div class="sections flex justify-between mt-20 ">
+                <div>
+                    <h1 class="mb-4 text-[20px] font-semibold">Quick Links</h1>
+                    <p class="text-gray-600">Home</p>
+                    <p class="text-gray-600 my-3">About Us</p>
+                    <p class="text-gray-600">Insurance</p>
+                    <p class="text-gray-600 my-3">Privacy Policy</p>
+                </div>
+                <div>
+                    <h1 class="mb-4 text-[20px] font-semibold">Our Service</h1>
+                    <p class="text-gray-600">Life Insurance</p>
+                    <p class="text-gray-600 my-3">Car Insurance</p>
+                    <p class="text-gray-600">Health Insurance</p>
+                    <p class="text-gray-600 my-3">House Insurance</p>
+                </div>
+                <div>
+                    <p class="mb-4 text-[20px] font-semibold">Help</p>
+                    <p class="text-gray-600">Contact Us</p>
+                    <p class="text-gray-600 my-3">FAQs</p>
+                </div>
+                <div>
+                    <p class="mb-4 text-[20px] font-semibold">Subscribe to our newsletter</p>
+                    <p class="my-5">Email</p>
+                    <hr>
+                    <div class="mt-10 flex gap-5">
+                        <span><i class="fa-brands fa-facebook-f"></i></span>
+                        <span><i class="fa-brands fa-twitter"></i></span>
+                        <span><i class="fa-brands fa-instagram"></i></span>
+                    </div>
+                </div>
+            </div>
+            <p class="text-gray-500 text-center mt-20">© 2027 UIDesign.to - All rights reserved.</p>
         </div>
-        <p class="text-gray-500 text-center mt-20">© 2027 UIDesign.to - All rights reserved.</p>
-    </div>
-</section>
+    </section>
 </body>
 
 </html>
